fixed layout shift (#12)
sudo merge >:D

--- a/src/components/StyleLoader/Core.deferred.scss
+++ b/src/components/StyleLoader/Core.deferred.scss
@@ -1,10 +1,2 @@
 @use '@htv/ui-kit/styles/colors';
-@use '@htv/ui-kit/styles/mixins';
-
 @include colors.deferInit();
-
-html {
-  @include mixins.media(phone) {
-    font-size: 13px;
-  }
-}
